fix : relative css issue and  Deselect btn jump error

--- a/src/App.css
+++ b/src/App.css
@@ -57,13 +57,13 @@ section:not(.tabSection),
 }
 
 .tabSection {
-  background   : linear-gradient(0deg, transparent 13.94%, var(--light-bg) 54.73%);
-  position     : absolute;
-  width        : 100%;
-  max-width    : var(--max-width);
-  z-index      : 2;
-  height       : 50px;
-  /* overflow  : hidden; */
+  background: linear-gradient(0deg, transparent 13.94%, var(--light-bg) 54.73%);
+  position  : absolute;
+  width     : 100%;
+  max-width : var(--max-width);
+  z-index   : 2;
+  height    : 50px;
+  overflow  : hidden;
 }
 
 .tabContainer {
@@ -587,7 +587,7 @@ html[theme="dark"] .react-loading-skeleton {
   display        : flex;
   justify-content: flex-end;
   align-items    : center;
-  transition     : all .3 ease-in-out;
+  transition     : all .3s ease-in-out;
 }
 
 
